cluster/longhorn/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui
  labels:
    app: longhorn-ui
    name: longhorn-ui
  namespace: longhorn-system
spec:
  rules:
  - host: longhorn.thomitzek.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: longhorn-frontend
            port: 
              number: 80
